objects/OrgBusinessDays__c.object
<CustomObject>
    <fields>
        <fullName>LastMonthProductionDays__c</fullName>
        <label>Last Month Production Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastQuarterProductionDays__c</fullName>
        <label>Last Quarter Production Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTDProductionDays__c</fullName>
        <label>MTD Production Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTDProductionDays__c</fullName>
        <label>QTD Production Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>OrgBusinessDays</label>
</CustomObject>